--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
         </ul>
       </nav>
       <h1 class="header__title">no focus</h1>
-      <p class="header__text">
-        Что делать, когда не можешь делать ничего Или почему нам так сложно
-        сконцентрироваться, особенно когда очень надо
-      </p>
+      <div class="block-item-title header-block-item-title">
+        <p class="block-item-title-text">
+          Что делать, когда не можешь делать ничего Или почему нам так сложно
+          сконцентрироваться, особенно когда очень надо
+        </p>
+      </div>
       <span class="header__rec">rec</span>
     </header>
     <main class="content">
@@ -55,8 +57,10 @@
         </h2>
         <div class="section-why__blocks">
           <div class="section-why__blocks__item section-content">
-            <div class="section-why__blocks__item-title">
-              <h3 class="section-why__blocks__item-title-text">
+            <div class="block-item-title section-why__blocks__item-title">
+              <h3
+                class="block-item-title-text section-why__blocks__item-title-text"
+              >
                 Многозадачность
               </h3>
             </div>
@@ -64,27 +68,36 @@
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
-              её просто не существует. Исследователи 
-              <a class="link" href="https://dana.org/article/multicosts-of-multitasking/" target="_blank">выяснили</a>, что мозгу тяжело
-              концентрироваться даже на двух делах одновременно. А когда в поле
-              внимания попадает несколько важных задач, организм паникует и
-              выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
-              работаем невнимательно: ошибаемся и быстро устаём.
+              её просто не существует. Исследователи
+              <a
+                class="link"
+                href="https://dana.org/article/multicosts-of-multitasking/"
+                target="_blank"
+                >выяснили</a
+              >, что мозгу тяжело концентрироваться даже на двух делах
+              одновременно. А когда в поле внимания попадает несколько важных
+              задач, организм паникует и выделяет кортизол и адреналин —
+              «гормоны стресса». Из-за этого мы работаем невнимательно:
+              ошибаемся и быстро устаём.
             </p>
           </div>
           <div class="section-why__blocks__item section-content">
-            <div class="section-why__blocks__item-title">
-              <h3 class="section-why__blocks__item-title-text">Дофамин</h3>
+            <div class="block-item-title section-why__blocks__item-title">
+              <h3
+                class="block-item-title-text section-why__blocks__item-title-text"
+              >
+                Дофамин
+              </h3>
             </div>
             <p class="section-why__blocks__item-text block-item-text">
-              С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
-              невозможности сосредоточиться замешана и полная противоположность 
-              стрессу — дофамин. Это вещество участвует в системе вознаграждения 
-              мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то 
-              более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В 
-              это время и выделяется дофамин — и мы чувствуем удовольствие. 
-              Получается замкнутый круг: чем больше отвлекаешься, тем больше 
-              удовольствия получаешь.
+              С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+              нашей невозможности сосредоточиться замешана и полная
+              противоположность стрессу — дофамин. Это вещество участвует в
+              системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
+              от важной задачи на что-то более «приятное» для мозгов. Например,
+              смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы
+              чувствуем удовольствие. Получается замкнутый круг: чем больше
+              отвлекаешься, тем больше удовольствия получаешь.
             </p>
           </div>
         </div>
@@ -95,8 +108,10 @@
         </h2>
         <div class="section-causes__blocks">
           <div class="section-causes__blocks__item section-content">
-            <div class="section-causes__blocks__item-title">
-              <h3 class="section-causes__blocks__item-title-text">
+            <div class="block-item-title section-causes__blocks__item-title">
+              <h3
+                class="block-item-title-text section-causes__blocks__item-title-text"
+              >
                 Многозадачность
               </h3>
             </div>
@@ -110,8 +125,12 @@
             </p>
           </div>
           <div class="section-causes__blocks__item section-content">
-            <div class="section-causes__blocks__item-title">
-              <h3 class="section-causes__blocks__item-title-text">Еда</h3>
+            <div class="block-item-title section-causes__blocks__item-title">
+              <h3
+                class="block-item-title-text section-causes__blocks__item-title-text"
+              >
+                Еда
+              </h3>
             </div>
             <p class="section-causes__blocks__item-text block-item-text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -123,8 +142,12 @@
             </p>
           </div>
           <div class="section-causes__blocks__item section-content">
-            <div class="section-causes__blocks__item-title">
-              <h3 class="section-causes__blocks__item-title-text">Гаджеты</h3>
+            <div class="block-item-title section-causes__blocks__item-title">
+              <h3
+                class="block-item-title-text section-causes__blocks__item-title-text"
+              >
+                Гаджеты
+              </h3>
             </div>
             <p class="section-causes__blocks__item-text block-item-text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
@@ -144,14 +167,16 @@
           секунд)
         </h2>
         <div class="section-advice__blocks">
-          <div class="section-advice__blocks-title">
-            <h3 class="section-advice__blocks-title-text">
+          <div class="block-item-title section-advice__blocks-title">
+            <h3 class="block-item-title-text section-advice__blocks-title-text">
               5 простых (на самом деле не очень) советов
             </h3>
           </div>
           <div class="section-advice__blocks__item section-content">
-            <div class="section-advice__blocks__item-title">
-              <h4 class="section-advice__blocks__item-title-text">
+            <div class="block-item-title section-advice__blocks__item-title">
+              <h4
+                class="block-item-title-text section-advice__blocks__item-title-text"
+              >
                 Представьте небо и облака
               </h4>
             </div>
@@ -167,8 +192,10 @@
             </p>
           </div>
           <div class="section-advice__blocks__item section-content">
-            <div class="section-advice__blocks__item-title">
-              <h3 class="section-advice__blocks__item-title-text">
+            <div class="block-item-title section-advice__blocks__item-title">
+              <h3
+                class="block-item-title-text section-advice__blocks__item-title-text"
+              >
                 Включите музыку
               </h3>
             </div>
@@ -180,25 +207,32 @@
             </p>
           </div>
           <div class="section-advice__blocks__item section-content">
-            <div class="section-advice__blocks__item-title">
-              <h3 class="section-advice__blocks__item-title-text">
+            <div class="block-item-title section-advice__blocks__item-title">
+              <h3
+                class="block-item-title-text section-advice__blocks__item-title-text"
+              >
                 Прогуляйтесь
               </h3>
             </div>
             <p class="section-advice__blocks__item-text block-item-text">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-              <a class="link" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank">показал</a>, 
-              что созерцание природы повышает концентрацию, в то время
-              как после просмотра городских пейзажей она наоборот понижается.
-              Можно совместить прогулку с физическими упражнениями или бегом —
-              так в мозг поступит ещё больше кислорода и он будет лучше
-              работать. Но и простая двадцатиминутная прогулка — тоже отличный
-              вариант.
+              <a
+                class="link"
+                href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+                target="_blank"
+                >показал</a
+              >, что созерцание природы повышает концентрацию, в то время как
+              после просмотра городских пейзажей она наоборот понижается. Можно
+              совместить прогулку с физическими упражнениями или бегом — так в
+              мозг поступит ещё больше кислорода и он будет лучше работать. Но и
+              простая двадцатиминутная прогулка — тоже отличный вариант.
             </p>
           </div>
           <div class="section-advice__blocks__item section-content">
-            <div class="section-advice__blocks__item-title">
-              <h3 class="section-advice__blocks__item-title-text">
+            <div class="block-item-title section-advice__blocks__item-title">
+              <h3
+                class="block-item-title-text section-advice__blocks__item-title-text"
+              >
                 Хорошо ешьте
               </h3>
             </div>
@@ -210,8 +244,12 @@
             </p>
           </div>
           <div class="section-advice__blocks__item section-content">
-            <div class="section-advice__blocks__item-title">
-              <h3 class="section-advice__blocks__item-title-text">Читайте</h3>
+            <div class="block-item-title section-advice__blocks__item-title">
+              <h3
+                class="block-item-title-text section-advice__blocks__item-title-text"
+              >
+                Читайте
+              </h3>
             </div>
             <p class="section-advice__blocks__item-text block-item-text">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
@@ -223,8 +261,10 @@
         </div>
       </section>
       <section class="images-gallery">
-        <div class="images-gallery-title">
-          <h2 class="images-gallery-title-text">А можно в картинках?</h2>
+        <div class="block-item-title images-gallery-title">
+          <h2 class="block-item-title-text images-gallery-title-text">
+            А можно в картинках?
+          </h2>
         </div>
         <div class="image-gallery-container">
           <div class="image-gallery-container_sunset"></div>
